fix: unhide loading msg for retrieve/create game covered by header

--- a/src/pages/Game.module.css
+++ b/src/pages/Game.module.css
@@ -246,7 +246,7 @@
 
 .loading-state {
   position: absolute;
-  bottom: -2rem;
+  /* bottom: -2rem; */
   display: flex;
   justify-content: center;
   align-items: center;
